# JobScraper

./: .gitignore  setup.cfg
src/: ETL_Work.ipynb  SeleniumRewrite.py  database_connectivity.py  generics.py  indeed_scrapers.py  main.py
tests/: test.py
