[metadata]
name = JobScraper-BenGoldweber
version = 0.0.1
author = Ben Goldweber
author_email = ben.goldweber@gmail.com
description = Used for scraping data in bulk from indeed into a local sqlite db for data mineing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bengoldweber/JobScraper.git
project_urls =
    Bug Tracker = https://github.com/bengoldweber/JobScraper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
